fix: redices scaling on image:hover from 1.1 to 1.025 (looks much nicer, and image doesnt get blurred so clearly)

--- a/css/extra.css
+++ b/css/extra.css
@@ -102,11 +102,11 @@ p.post-teaser a.readmore img{
     transition: all 0.5s ease;
 }
 p.post-teaser a.readmore img:hover{
-    -webkit-transform:scale(1.1); /* Safari and Chrome */
-    -moz-transform:scale(1.1); /* Firefox */
-    -ms-transform:scale(1.1); /* IE 9 */
-    -o-transform:scale(1.1); /* Opera */
-     transform:scale(1.1);
+    -webkit-transform:scale(1.025); /* Safari and Chrome */
+    -moz-transform:scale(1.025); /* Firefox */
+    -ms-transform:scale(1.025); /* IE 9 */
+    -o-transform:scale(1.025); /* Opera */
+     transform:scale(1.025);
 }
 
 
@@ -153,11 +153,11 @@ p.post-teaser a.readmore img:hover{
 }
 
 .thumbs a img:hover {
-    -webkit-transform:scale(1.1); /* Safari and Chrome */
-    -moz-transform:scale(1.1); /* Firefox */
-    -ms-transform:scale(1.1); /* IE 9 */
-    -o-transform:scale(1.1); /* Opera */
-     transform:scale(1.1);
+    -webkit-transform:scale(1.0.25); /* Safari and Chrome */
+    -moz-transform:scale(1.025); /* Firefox */
+    -ms-transform:scale(1.025); /* IE 9 */
+    -o-transform:scale(1.025); /* Opera */
+     transform:scale(1.025);
 }
 
 
